<?xml version="1.0"?>
<package>
  <name>rtt_subsystem_ports</name>
  <version>2.9.0</version>
  <description>
    rtt_subsystem_ports provides the necessary template files and cmake macros for
    automatic rtt subsystem ports generation from ROS msg files.
    based on rtt_roscomm from https://github.com/orocos/rtt_ros_integration.git
  </description>
  <maintainer email="dawid.seredynski@blabla.gmail.com">dseredyn</maintainer>

  <license>BSD</license>

  <author>Ruben Smits</author>
  <author>Jonathan Bohren</author>
  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rospack</build_depend>
  <build_depend>rtt_rosnode</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rospack</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>genmsg</run_depend>
  
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>
</package>
